<resources>
    <string name="app_name">World Note</string>
    <string name="library">Library</string>
    <string name="boards">Boards</string>
    <string name="timeline">Timeline</string>
    <string name="search">Search</string>
</resources>
